--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/frannverdu/serverexpress#readme",
   "keywords": [],
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
